--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a id="home-link" class="nav-item nav-link active" href="#">Home <span
+                    <a id="home-link" class="nav-item nav-link active" href="#">Home BAAAss <span
                             class="sr-only">(current)</span></a>
                     <a id="rent-link" class="nav-item nav-link" href="rent.html">Rent</a>
                 </div>
