--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <input id="newEmergContactNumber" type="text" placeholder="Mobile Number">
                 </div>
                 <div class="input-group mb-3">
-                    <input id="newEmergRelation" type="text" placeholder="Relation to Customer">
+                    <input id="newEmergRelation" type="text" placeholder="Relation">
                 </div>
 
             </div>
