Update for demo

--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
                     <h1 class=detail-header>Emergency Contact Details:</h1>
                 </div>
                 <div class="input-group mb-3">
-                    <input id="newEmergFirstName" type="text" placeholder="First Name">
+                    <input id="newEmergFirstName" type="text" placeholder="Forename">
                 </div>
 
                 <div class="input-group mb-3">
-                    <input id="newEmergSurname" type="text" placeholder="Last Name">
+                    <input id="newEmergSurname" type="text" placeholder="Surname">
                 </div>
                 <div class="input-group mb-3">
                     <input id="newEmergContactNumber" type="text" placeholder="Mobile Number">
                 </div>
                 <div class="input-group mb-3">
-                    <input id="newEmergRelation" type="text" placeholder="Relation">
+                    <input id="newEmergRelation" type="text" placeholder="Relation to Customer">
                 </div>
 
             </div>
